explained class and id

--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
     <!-- <h1 style="color: blue; background-color: aqua;">Curricullum Vitae</h1> -->
 
     <h1>Curricullum Vitae</h1>
+    <h2 class="juliet">my name is Juliet</h2>
+    <h2>am a software dev</h2>
+    <p id="pelz">am a cool lady</p>
   </body>
 </html>
